--- a/RectanglesScreen/Base.lproj/Main.storyboard
+++ b/RectanglesScreen/Base.lproj/Main.storyboard
@@ -21,22 +21,21 @@
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
                             </view>
                             <view contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="E3D-cY-CVA">
-                                <rect key="frame" x="16" y="458.66666666666674" width="361" height="359.33333333333326"/>
+                                <rect key="frame" x="16" y="458.66666666666674" width="361" height="339.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E3D-cY-CVA" secondAttribute="trailing" constant="16" id="9o1-ex-E1x"/>
-                            <constraint firstItem="E3D-cY-CVA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="B6Q-Sq-M0m"/>
-                            <constraint firstItem="6pt-PK-trt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="F8f-Hg-sQ2"/>
-                            <constraint firstItem="E3D-cY-CVA" firstAttribute="height" secondItem="6pt-PK-trt" secondAttribute="height" id="J3g-EV-YSB"/>
-                            <constraint firstItem="E3D-cY-CVA" firstAttribute="width" secondItem="6pt-PK-trt" secondAttribute="width" id="N00-wh-cu7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6pt-PK-trt" secondAttribute="trailing" constant="16" id="VnP-nt-bkH"/>
-                            <constraint firstItem="6pt-PK-trt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="sFv-jo-Pzb"/>
-                            <constraint firstItem="E3D-cY-CVA" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="t1q-aE-oww"/>
-                            <constraint firstItem="E3D-cY-CVA" firstAttribute="top" secondItem="6pt-PK-trt" secondAttribute="bottom" constant="20" id="tD9-hM-0OV"/>
+                            <constraint firstItem="E3D-cY-CVA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="2bP-RR-D3c"/>
+                            <constraint firstItem="E3D-cY-CVA" firstAttribute="height" secondItem="6pt-PK-trt" secondAttribute="height" multiplier="0.943466" id="4B3-WJ-wwO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6pt-PK-trt" secondAttribute="trailing" constant="16" id="8rt-bb-zxg"/>
+                            <constraint firstItem="6pt-PK-trt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="GI0-Yb-GE6"/>
+                            <constraint firstItem="6pt-PK-trt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Pak-q8-a86"/>
+                            <constraint firstItem="E3D-cY-CVA" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-20" id="Pew-8j-NjZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E3D-cY-CVA" secondAttribute="trailing" constant="16" id="TOQ-zG-QaW"/>
+                            <constraint firstItem="E3D-cY-CVA" firstAttribute="top" secondItem="6pt-PK-trt" secondAttribute="bottom" constant="20" id="uzb-su-7vO"/>
                         </constraints>
                     </view>
                 </viewController>
